--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,4 +25,45 @@ services:
       - "./stack:/stack"
 
   worker01:
-    container_name: 
+    container_name: worker01
+    image: docker:18.05.0-ce-dind
+    privileged: true
+    tty: true
+    depends_on: 
+      - manager
+      - registry
+    expose:
+      - 7946
+      - 7946/udp
+      - 4789/udp
+    command: "--insecure-registry registry:5000"
+
+  worker02:
+    container_name: worker02
+    image: docker:18.05.0-ce-dind
+    privileged: true
+    tty: true
+    depends_on: 
+      - manager
+      - registry
+    expose:
+      - 7946
+      - 7946/udp
+      - 4789/udp
+    command: "--insecure-registry registry:5000"
+
+  worker03:
+    container_name: worker03
+    image: docker:18.05.0-ce-dind
+    privileged: true
+    tty: true
+    depends_on: 
+      - manager
+      - registry
+    expose:
+      - 7946
+      - 7946/udp
+      - 4789/udp
+    command: "--insecure-registry registry:5000"
+  
+  
